# MCSECE

./: .gitignore  .gitmodules  README.md  environment.yml  environment_dev.yml  requirements.txt  requirements_dev.txt  run_experiments.bat  run_experiments.sh  run_reproducibility.sh
CFEC/: .coveragerc  .gitignore  LICENSE  README.md  all_requirements.txt  case study.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
CFEC/cfec/: __init__.py  base.py
CFEC/cfec/constraints/: __init__.py  _freeze.py  _max_difference.py  _monotocity.py  _nominal.py  _one_hot.py  _utils.py  _value_change_direction.py  _value_range.py
CFEC/cfec/explainers/: __init__.py  _cadex.py  _cadex_parallel.py  _ece.py  _fimap.py
CFEC/cfec/preprocessing/: __init__.py  _data_frame_mapper.py
CFEC/cfec/visualization/: __init__.py  _visualization.py
CFEC/data/: __init__.py  _adult_data.py  _german_data.py
CFEC/docs/source/: conf.py  counterfactuals.constraints.rst  counterfactuals.explainers.rst  counterfactuals.preprocessing.rst  counterfactuals.rst  counterfactuals.visualization.rst  index.rst  modules.rst
CFEC/evaluation/: evaluate_cadex.ipynb  evaluate_cadex_and_fimap.ipynb  evaluate_fimap.ipynb
CFEC/models/: _nn_adult.py  _nn_german.py
CFEC/models/model_german/: keras_metadata.pb  saved_model.pb
CFEC/models/model_german/variables/: variables.data-00000-of-00001  variables.index
CFEC/tests/: test_counterfactuals.py  test_dataframemapper.py  test_parse_constraints.py
data/: adult_constraints.json  adult_prep.csv  adult_test.csv  adult_test_ohe.csv  (+19 more)
(+232 files in other folders)
