[metadata]
name = CFEC
version = 0.0.5
author = Zuzanna Trafas, Adam Wojciechowski, Maciej Falbogowski
author_email = maciej.falbogowski@gmail.com
description = Python package for counterfactuals generation and presentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LoGosX/CFEC
project_urls =
    Bug Tracker = https://github.com/LoGosX/CFEC/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    tensorflow>=2.7.0
    pandas>=1.3.5
    numpy>=1.21.5
    scikit-learn>=1.0.2
    psutil>=5.8.0
    joblib>=1.1.0
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
cfec = py.typed

[flake8]
max-line-length = 160